@@ -5,6 +5,9 @@ import org.jetbrains.annotations.NotNull;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.Scanner;
 import java.util.function.Consumer;
@@ -35,15 +38,15 @@ public class UpdateChecker {
     public void getVersion(@NotNull final Consumer<? super String> callback) {
         this.getPlugin().getScheduler().runAsync(() -> {
             try {
-                InputStream inputStream = new URL(
+                InputStream inputStream = new URI(
                         "https://api.polymart.org/v1/getResourceInfoSimple?key=version&resource_id=" + this.getPlugin().getResourceId()
-                ).openStream();
+                ).toURL().openStream();
                 Scanner scanner = new Scanner(inputStream);
 
                 if (scanner.hasNext()) {
                     callback.accept(scanner.next());
                 }
-            } catch (IOException e) {
+            } catch (IOException | URISyntaxException e) {
                 this.getPlugin().getLogger().warning("Failed to check for updates: " + e.getMessage());
             }
         });
